refactor: new screeen location

--- a/localizacao.html
+++ b/localizacao.html
@@ -1,4 +1,4 @@
-<div class="localition-container">
+<div class="container-presentes">
   <a
     href="javascript:void(0);"
     class="back-arrow"
@@ -6,50 +6,91 @@
   >
     &#8592; Voltar
   </a>
-  <img
-    src="./assets/images/flor02.webp"
-    alt="Flor decorativa"
-    class="presence-image-flower"
-  />
-  <img
-    src="./assets/images/flor02.webp"
-    alt="Flor decorativa esquerda"
-    class="presence-image-flower-left"
-  />
 
-  <div class="title">
-    <h2>Localização do Evento</h2>
-    <p>
-      Estamos ansiosos para celebrar este momento único com você! Para que você
-      chegue com conforto e tranquilidade, preparamos todos os detalhes sobre o
-      local do evento.
-    </p>
-  </div>
-  <div class="map-image">
-    <a
-      href="https://www.google.com/maps?q=-21.46849607932378,-51.50088985976688"
-      target="_blank"
-      title="Clique para ver o local no Google Maps"
-    >
-      <img
-        src="./assets/images/map.png"
-        alt="Imagem do local do evento"
-        class="location-map-image"
-      />
-    </a>
-  </div>
+  <div class="gift-list-container">
+    <img
+      src="./assets/images/flor02.webp"
+      alt="Flor decorativa"
+      class="background-flower-presentes"
+    />
+    <img
+      src="./assets/images/flor02.webp"
+      alt="Flor decorativa esquerda"
+      class="background-flower-presentes-left"
+    />
 
-  <div class="map-button-container">
-    <a
-      href="https://www.google.com/maps?q=-21.468227212470158,-51.50110198481022"
-      target="_blank"
-      class="map-button"
-    >
-      📍 Abrir no Google Maps
-    </a>
-  </div>
+    <div class="title">
+      <h2>Localização</h2>
+      <p>Veja como chegar aos locais do nosso grande dia</p>
+    </div>
 
-  <div class="title">
-    <h1>Será um prazer contar com a sua presença!</h1>
+    <div class="locations-grid">
+      <div class="location-card">
+        <div class="location-header">
+          <h3>Cerimônia: Igreja Batista</h3>
+        </div>
+
+        <div class="location-info">
+          <p class="location-name"></p>
+          <p class="location-address">
+            R. Monte Castelo, 1286 - Centro, Dracena - SP, 17900-000
+          </p>
+          <p class="location-time">📅 14 de Junho de 2025</p>
+          <p class="location-time">⏰ 15:00h</p>
+        </div>
+
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.072454258979!2d-51.5352227!3d-21.487308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjHCsDI5JzE0LjMiUyA1McKwMzInMDAuMCJX!5e0!3m2!1spt-BR!2sbr!4v1620000000000!5m2!1spt-BR!2sbr"
+            allowfullscreen
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+
+        <a
+          href="https://www.google.com/maps?q=-21.487307974484875,-51.53304782767894"
+          target="_blank"
+          class="map-button"
+        >
+          📍 Abrir mapa
+        </a>
+      </div>
+
+      <div class="location-card">
+        <div class="location-header">
+          <h3>Recepção: Chácara</h3>
+        </div>
+
+        <div class="location-info">
+          <p class="location-address">
+            SPA PEC - PALMEIRA, Dracena - SP, 17900-000
+          </p>
+          <p class="location-time">📅 14 de Junho de 2025</p>
+          <p class="location-time">⏰ 16:00h</p>
+        </div>
+
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8796543210987!2d-51.5030217!3d-21.4682658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjHCsDI4JzA5LjgiUyA1McKwMzAnMDMuMSJX!5e0!3m2!1spt-BR!2sbr!4v1620000000000!5m2!1spt-BR!2sbr"
+            allowfullscreen
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+
+        <a
+          href="https://www.google.com/maps?q=-21.468265832655618,-51.50084678889207"
+          target="_blank"
+          class="map-button"
+        >
+          📍 Abrir mapa
+        </a>
+      </div>
+    </div>
+
+    <div class="gift-list-footer">
+      <p>Será um prazer contar com a sua presença!</p>
+    </div>
   </div>
 </div>
